--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,17 @@ jsonrpc-client-core = "0.5.0"
 keccak-hash = "0.1"
 url = "1.2.0"
 parking_lot = "0.7"
-parity-codec = "2.0"
+parity-codec = "3.0"
 jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git" }
 jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git" }
-node-primitives = { git = "https://github.com/chainpool/substrate" }
-node-runtime = { git = "https://github.com/chainpool/substrate" }
-srml-contract = { git = "https://github.com/chainpool/substrate" }
-srml-system = { git = "https://github.com/chainpool/substrate" }
-srml-support = { git = "https://github.com/chainpool/substrate" }
-substrate-primitives = { git = "https://github.com/chainpool/substrate" }
-sr-primitives = { git = "https://github.com/chainpool/substrate" }
+node-primitives = { path = "../substrate/node/primitives" }
+node-runtime = { path = "../substrate/node/runtime" }
+srml-contract = { path = "../substrate/srml/contract" }
+srml-system = { path = "../substrate/srml/system" }
+srml-support = { path = "../substrate/srml/support" }
+substrate-primitives = { path = "../substrate/core/primitives" }
+sr-primitives = { path = "../substrate/core/sr-primitives" }
+sr-io = { path = "../substrate/core/sr-io" }
 futures = "0.1"
 log = "0.4"
 serde = "1.0"
